fixed-scrollbar

--- a/src/components/UserList/UserListView.scss
+++ b/src/components/UserList/UserListView.scss
@@ -1,15 +1,21 @@
-.user__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  padding: 0px 20px;
-  z-index: 2;
+.scroll {
   max-height: 76vh;
   overflow-y: auto;
   max-width: 100%;
   overflow-x: hidden;
   margin-bottom: 20px;
+  padding-right: 10px;
+}
+
+.user__list {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  padding: 0px 20px;
+  z-index: 2;
 
   .user__item {
     width: 100%;
